--- a/front/src/app/blog/post/post.component.html
+++ b/front/src/app/blog/post/post.component.html
@@ -1,6 +1,6 @@
 <article class="offset-lg-2 col-lg-8 row" *ngFor="let post of posts">
   <header class="col-lg-12">
-    <a [routerLink]=[post?.id]><h3>{{post?.title}}</h3></a>
+    <a [routerLink]="['',post?.id]"><h3>{{post?.title}}</h3></a>
   </header>
   <section class="section-post-content">
       {{post?.content}}
