--- a/front/src/app/dashboard/post-editor/post-editor.component.html
+++ b/front/src/app/dashboard/post-editor/post-editor.component.html
@@ -1,10 +1,13 @@
 <div class="row">
   <div class="col-lg-12 border-bottom">
     <header id="post-url-header">
-      <input tabindex="1" id="input-title" type="text" id="post-url" placeholder="Your post title"
+      <input tabindex="1" id="input-title" type="text" id="post-url" [formControl]="postGroup.controls['title']"
+      placeholder="Your post title"
+
       />
       <div id="action-bar">
-        <button tabindex="3" class="btn btn-primary" type="button" id="save-post" name="save-post">Save
+        <button tabindex="3"  [ngClass]="{'btn-danger':error}" class="btn btn-primary" type="button" id="save-post" (click)="saveNewOrUpdatePost($event)" name="save-post">Save
+            <i [ngClass]="{'fa fa-spinner fa-spin':sending}"></i>
         </button>
       </div>
     </header>
@@ -13,8 +16,7 @@
 <div class="row full-height">
   <div class="col-lg-12" contenteditable="true">
     <div class="input-group full-height">
-      <textarea tabindex="2" class="form-control full-height" id="post-input">
-
+      <textarea tabindex="2" class="form-control full-height" id="post-input" [formControl]="postGroup.controls['content']">
       </textarea>
     </div>
 
